<resources>
    <string name="tv_title_main_screen">Главная страница</string>
    <string name="welcome_text">Добро пожаловать</string>
    <string name="greeting_button_text">Приветствие</string>
    <string name="instructions_text">Для получения информации о пользователе, нажмите на кнопку приветствия…</string>
    <string name="name_text">Имя</string>
    <string name="surname_text">Фамилия</string>
    <string name="birthdate_text">Дата рождения</string>
    <string name="save_user_data_text">Информация о пользователе сохранена</string>

    <string name="error_message_name_short">Поле должно содержать не менее 2 букв</string>
    <string name="error_message_name_contains_special_symbol">Допустимы только буквы</string>
    <string name="error_message_date_interval_error">Дата рождения не может быть позже сегодняшнего дня</string>
    <string name="greetings_dialog">Спасибо, что установили наше приложение! \nЗдесь вы можете изменить информацию о себе.</string>
</resources>