<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="ru.nstu.koroleva.home.ui.UserInfoDialogFragment">

    <LinearLayout
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wNameField"
            style="@style/CustomWidgetTextInputLayout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp">

            <EditText
                android:id="@+id/etName"
                style="@style/CustomEditTextStyle"
                android:hint="@string/name_text"
                android:imeOptions="actionNext"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wSurnameField"
            style="@style/CustomWidgetTextInputLayout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp">

            <EditText
                android:id="@+id/etSurname"
                style="@style/CustomEditTextStyle"
                android:hint="@string/surname_text"
                android:imeOptions="actionDone"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wBirthdateField"
            style="@style/CustomWidgetTextInputLayout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp">

            <EditText
                android:id="@+id/etBirthdate"
                style="@style/CustomEditTextStyle"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/birthdate_text"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/bCloseDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:clickable="true"
                android:cropToPadding="false"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                app:backgroundTint="#FFF0F0F3"
                app:rippleColor="@color/gray_transparent" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/bSaveUserInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:clickable="true"
                android:src="@android:drawable/ic_popup_sync"
                app:backgroundTint="@color/pink"  />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>